# c

./: .gitignore  CMakeLists.txt  README.md  build.c  deps.cmake  main.c
cbuild/: CMakeLists.txt  cbuild.c  cbuild.h  cbuild_private.h  cbuilder_private.h  test_cbuild.c
ccmd/: CMakeLists.txt  ccmd.c  ccmd.h
cmake/: target.cmake
cprocess/: CMakeLists.txt  cprocess.c  cprocess.h
src/cbuild/: CMakeLists.txt  cbuild.c  cbuild.h  cbuild_private.h  cbuilder_private.h  test_cbuild.c
src/ccmd/: CMakeLists.txt  ccmd.c  ccmd.h
src/cprocess/: CMakeLists.txt  cprocess.c  cprocess.h
src/utils/: CMakeLists.txt  cerror.h  helpers.h
test/project1/: build.c  calc.c  calc.h  main.c
test/project1/module1/: main.c
test/project2/: build.c  main.c
utils/: CMakeLists.txt  cerror.h
